--- a/docs/source/model_doc/maskformer.mdx
+++ b/docs/source/model_doc/maskformer.mdx
@@ -24,7 +24,7 @@ Tips:
 
 - One can use the [`AutoFeatureExtractor`] API to prepare images for the model.
 
-This model was contributed by [francesco](<https://huggingface.co/francesco). The original code can be found [here](https://github.com/facebookresearch/MaskFormer).
+This model was contributed by [francesco](https://huggingface.co/francesco). The original code can be found [here](https://github.com/facebookresearch/MaskFormer).
 
 ## MaskFormer specific outputs
 
