indent in maskformer.mdx

--- a/docs/source/model_doc/maskformer.mdx
+++ b/docs/source/model_doc/maskformer.mdx
@@ -45,8 +45,10 @@ This model was contributed by [francesco](https://huggingface.co/francesco). The
 
 ## MaskFormerModel
 
-[[autodoc]] MaskFormerModel - forward
+[[autodoc]] MaskFormerModel
+    - forward
 
 ## MaskFormerForInstanceSegmentation
 
-[[autodoc]] MaskFormerForInstanceSegmentation - forward
+[[autodoc]] MaskFormerForInstanceSegmentation
+    - forward
